--- a/tests/e2e-webhook-metrics/webhook-metrics-java/chainsaw-test.yaml
+++ b/tests/e2e-webhook-metrics/webhook-metrics-java/chainsaw-test.yaml
@@ -41,23 +41,18 @@ spec:
               #!/bin/sh
               set -e
               
-              # Get the operator service name
-              SERVICE_NAME=$(kubectl get service -n ${OPERATOR_NAMESPACE} -l app.kubernetes.io/name=opentelemetry-operator -o jsonpath='{.items[0].metadata.name}')
-              echo "Using service: ${SERVICE_NAME}"
-              
-              # DEBUG: Print operator deployment args to verify the flag is present
+              # Get the operator pod name
+              POD_NAME=$(kubectl get pods -n ${OPERATOR_NAMESPACE} -l app.kubernetes.io/name=opentelemetry-operator -o jsonpath='{.items[0].metadata.name}')
+              echo "Using pod: ${POD_NAME}"
+
+              # Fetch metrics using kubectl get --raw via POD proxy
               echo ""
-              echo "=== Operator Deployment Args ==="
-              kubectl get deployment -n ${OPERATOR_NAMESPACE} -o jsonpath='{.items[0].spec.template.spec.containers[0].args}' | tr ',' '\n'
-              echo ""
-              
-              # Fetch metrics using kubectl get --raw (this handles authentication)
-              echo ""
-              echo "=== Fetching metrics via kubectl get --raw ==="
+              echo "=== Fetching metrics via kubectl get --raw (POD proxy) ==="
               for i in 1 2 3 4 5 6 7 8 9 10; do
                 echo "Attempt $i to fetch metrics..."
-                # Use kubectl get --raw to access the metrics endpoint with proper auth
-                METRICS=$(kubectl get --raw "/api/v1/namespaces/${OPERATOR_NAMESPACE}/services/https:${SERVICE_NAME}:8443/proxy/metrics" -v=1 || true)
+                # Use kubectl get --raw to access the metrics endpoint via pod proxy
+                # Note: We use https: prefix to ensure TLS is used to talk to the pod
+                METRICS=$(kubectl get --raw "/api/v1/namespaces/${OPERATOR_NAMESPACE}/pods/https:${POD_NAME}:8443/proxy/metrics" -v=1 || true)
                 if echo "$METRICS" | grep -q "opentelemetry_operator_pod_mutations_total"; then
                   echo "Found metric!"
                   break
