--- a/config/samples/clusterobservability_v1alpha1_clusterobservability.yaml
+++ b/config/samples/clusterobservability_v1alpha1_clusterobservability.yaml
@@ -2,19 +2,13 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Example ClusterObservability configuration
-# This resource manages a complete observability stack for your Kubernetes cluster
+# This resource manages a complete observability stack for your Kubernetes cluster.
 apiVersion: opentelemetry.io/v1alpha1
 kind: ClusterObservability
 metadata:
   name: cluster-observability
   namespace: opentelemetry-operator-system
 spec:
-  # Signals to collect - must include at least one
-  signals:
-    - traces
-    - metrics
-    - logs
-
   # OTLP HTTP exporter configuration
   exporter:
     # Base endpoint for all signals (e.g., https://otel-backend.example.com:4318)
