Add hostUsers to OpenTelemetryCommonFields struct

--- a/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -6302,6 +6302,8 @@ spec:
                 type: boolean
               hostPID:
                 type: boolean
+              hostUsers:
+                type: boolean
               image:
                 type: string
               imagePullPolicy:
