--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -6289,6 +6289,8 @@ spec:
                 type: boolean
               hostPID:
                 type: boolean
+              hostUsers:
+                type: boolean
               image:
                 type: string
               imagePullPolicy:
