--- a/.chloggen/target_allocator_use_job_name.yaml
+++ b/.chloggen/target_allocator_use_job_name.yaml
@@ -2,13 +2,10 @@
 change_type: enhancement
 
 # The name of the component, or a single word describing the area of concern, (e.g. collector, target allocator, auto-instrumentation, opamp, github action)
-component: least-weighted target allocator strategy
+component: target allocator
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: With this change, the least-weighted target allocation strategy
-will use job name instead of "first match" to break target count
-ties. This way, collector targets from the same job will be spread
-across collectors.
+note: Make the least-weighted target allocation strategy take job name into account.
 
 # One or more tracking issues related to the change
 issues: [3128]
@@ -16,4 +13,4 @@ issues: [3128]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: Uses job name instead of "first match" to when number of targets is equal. The effect is to spread out targets with the same job name across collectors.
