Feature(auto-injection): Add centralized auto-injection configuration to Instrumentation CRD Introduces AutoInjectionSpec and TargetService field to enable centralized OpenTelemetry agent injection without per-deployment annotations.
Changes:
- Add AutoInjectionSpec struct with enabled flag and targetServices list
- Add TargetService field to define service targets
- Support language-specific prefixes (jvm, go, node, py, dotnet) in service names
- Support custom executable paths for Go services

This eliminates the need to annotate individual deployments for instrumentation.
Services listed in autoInjection.targetServices will automatically receive
appropriate OpenTelemetry agents during pod creation.

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,2 +1,12 @@
 resources:
 - manager.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: ghcr.io/open-telemetry/opentelemetry-operator/opentelemetry-operator
+  newTag: 1.0.0-5-g6950da57
+patches:
+- patch: '[{"op":"add","path":"/spec/template/spec/containers/0/args/-","value":"--enable-go-instrumentation=true"}]'
+  target:
+    kind: Deployment
