--- a/internal/manifests/collector/testdata/rbac_k8sattributes_service_name.yaml
+++ b/internal/manifests/collector/testdata/rbac_k8sattributes_service_name.yaml
@@ -1,5 +1,5 @@
 receivers:
-  otlp:
+  otlp_grpc:
     protocols:
       grpc:
 processors:
@@ -8,11 +8,11 @@ processors:
       metadata:
         - service.name
 exporters:
-  otlp:
+  otlp_grpc:
     endpoint: "otlp:4317"
 service:
   pipelines:
     traces:
       receivers: [otlp]
       processors: [k8sattributes]
-      exporters: [otlp] 
+      exporters: [otlp_grpc] 
