--- a/tests/e2e-prometheuscr/create-sm-prometheus-exporters/06-install.yaml
+++ b/tests/e2e-prometheuscr/create-sm-prometheus-exporters/06-install.yaml
@@ -30,5 +30,5 @@ spec:
     service:
       pipelines:
         metrics:
-          receivers: [otlp, prometheus]
+          receivers: [otlp_grpc, prometheus]
           exporters: [prometheus/dev]
