--- a/tests/e2e/managed-reconcile/01-assert.yaml
+++ b/tests/e2e/managed-reconcile/01-assert.yaml
@@ -67,5 +67,5 @@ data:
     service:
       pipelines:
         traces:
-          receivers: [jaeger, otlp]
+          receivers: [jaeger, otlp_grpc]
           exporters: [debug]
