--- a/tests/e2e/managed-reconcile/01-disable-reconciliation.yaml
+++ b/tests/e2e/managed-reconcile/01-disable-reconciliation.yaml
@@ -45,5 +45,5 @@ data:
     service:
       pipelines:
         traces:
-          receivers: [jaeger, otlp]
+          receivers: [jaeger, otlp_grpc]
           exporters: [debug]
