--- a/tests/e2e/smoke-ip-families/01-install.yaml
+++ b/tests/e2e/smoke-ip-families/01-install.yaml
@@ -25,6 +25,6 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [jaeger, otlp]
+          receivers: [jaeger, otlp_grpc]
           processors: []
           exporters: [debug]
