--- a/tests/e2e/smoke-restarting-deployment/01-install-second-config.yaml
+++ b/tests/e2e/smoke-restarting-deployment/01-install-second-config.yaml
@@ -17,6 +17,6 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [jaeger, otlp]
+          receivers: [jaeger, otlp_grpc]
           exporters: [debug]
 
