--- a/tests/e2e-openshift/multi-cluster/02-otlp-receiver.yaml
+++ b/tests/e2e-openshift/multi-cluster/02-otlp-receiver.yaml
@@ -19,7 +19,7 @@ spec:
               key_file: /certs/server.key
               client_ca_file: /certs/ca.crt
     exporters:
-      otlp:
+      otlp_grpc:
         endpoint: "tempo-multicluster.chainsaw-multi-cluster-receive.svc:4317"
         tls:
           insecure: true
@@ -27,7 +27,7 @@ spec:
       pipelines:
         traces:
           receivers: [otlp]
-          exporters: [otlp]
+          exporters: [otlp_grpc]
   ingress:
     route:
       termination: passthrough
