--- a/tests/e2e-prometheuscr/create-sm-prometheus-exporters/04-install.yaml
+++ b/tests/e2e-prometheuscr/create-sm-prometheus-exporters/04-install.yaml
@@ -27,5 +27,5 @@ spec:
     service:
       pipelines:
         metrics:
-          receivers: [otlp, prometheus]
+          receivers: [otlp_grpc, prometheus]
           exporters: [prometheus/prod]
