--- a/tests/e2e/smoke-ip-families/00-install.yaml
+++ b/tests/e2e/smoke-ip-families/00-install.yaml
@@ -24,6 +24,6 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [jaeger, otlp]
+          receivers: [jaeger, otlp_grpc]
           processors: []
           exporters: [debug]
