Upgrade OpenShift upgrade test to assert networkpolicies

--- a/tests/e2e-openshift-upgrade/upgrade/chainsaw-test.yaml
+++ b/tests/e2e-openshift-upgrade/upgrade/chainsaw-test.yaml
@@ -268,6 +268,10 @@ spec:
         kind: StatefulSet
         namespace: chainsaw-upgrade
         format: yaml
+  - name: Assert operator and collector network policies post upgrade
+    try:
+    - assert:
+        file: assert-network-policies.yaml
   - name: Generate metrics and traces after upgrade
     try:
     - apply:
