[chore] Overwrite the image archive upload in e2e test setup
When the test workflow is retried, trying to re-upload the archive
results in a failure.

--- a/.github/workflows/e2e-reusable.yaml
+++ b/.github/workflows/e2e-reusable.yaml
@@ -51,6 +51,7 @@ jobs:
         path: ${{ env.IMAGE_ARCHIVE_FILENAME }}
         if-no-files-found: 'error'
         retention-days: 1
+        overwrite: true
 
   e2e-tests:
     runs-on: ubuntu-latest
