--- a/tests/e2e-automatic-rbac/receiver-kubeletstats/03-assert.yaml
+++ b/tests/e2e-automatic-rbac/receiver-kubeletstats/03-assert.yaml
@@ -7,7 +7,7 @@ rules:
   resources: ["nodes/stats"]
   verbs: ["get"]
 - apiGroups: [""]
-  resources: ["nodes/proxy"]
+  resources: ["nodes/pods"]
   verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
