--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -16,6 +16,8 @@ linters:
               desc: Use go.uber.org/atomic instead of sync/atomic
             - pkg: github.com/pkg/errors
               desc: Use 'errors' or 'fmt' instead of github.com/pkg/errors
+    exhaustive:
+      default-signifies-exhaustive: true
     goheader:
       template: |-
         Copyright The OpenTelemetry Authors
@@ -43,7 +45,6 @@ linters:
       checks:
         - all
         - -QF1001 # FIXME Apply De Morgan’s law
-        - -QF1003 # FIXME Convert if/else-if chain to tagged switch
         - -QF1004 # FIXME Use strings.ReplaceAll instead of strings.Replace with n == -1
         - -QF1008 # FIXME Omit embedded fields from selector expression
         - -QF1011 # FIXME Omit redundant type from variable declaration
