--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -37,6 +37,8 @@ linters:
       locale: US
       ignore-rules:
         - cancelled
+    nolintlint:
+      require-specific: true
     revive:
       confidence: 0.8
     staticcheck:
@@ -64,6 +66,7 @@ linters:
     - govet
     - ineffassign
     - misspell
+    - nolintlint
     - staticcheck
     - unparam
     - unused
