--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -16,6 +16,8 @@ linters:
               desc: Use go.uber.org/atomic instead of sync/atomic
             - pkg: github.com/pkg/errors
               desc: Use 'errors' or 'fmt' instead of github.com/pkg/errors
+            - pkg: go.uber.org/multierr
+              desc: Use 'errors.Join' instead of go.uber.org/multierr
     exhaustive:
       default-signifies-exhaustive: true
     goheader:
