[chore] migrate from go.uber.org/atomic to sync/atomic
Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -12,10 +12,10 @@ linters:
       rules:
         main:
           deny:
-            - pkg: sync/atomic
-              desc: Use go.uber.org/atomic instead of sync/atomic
             - pkg: github.com/pkg/errors
               desc: Use 'errors' or 'fmt' instead of github.com/pkg/errors
+            - pkg: go.uber.org/atomic
+              desc: Use sync/atomic instead of go.uber.org/atomic
             - pkg: go.uber.org/multierr
               desc: Use 'errors.Join' instead of go.uber.org/multierr
     exhaustive:
