Add WeightOverrides to the CR
Signed-off-by: Geoff Wilson <geoff@gr-oss.io>

--- a/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -8561,6 +8561,23 @@ spec:
                       - whenUnsatisfiable
                       type: object
                     type: array
+                  weightOverrides:
+                    items:
+                      properties:
+                        jobName:
+                          type: string
+                        weightClass:
+                          enum:
+                          - light
+                          - medium
+                          - heavy
+                          type: string
+                      required:
+                      - jobName
+                      - weightClass
+                      type: object
+                    type: array
+                    x-kubernetes-list-type: atomic
                 type: object
               terminationGracePeriodSeconds:
                 format: int64
