--- a/config/crd/bases/opentelemetry.io_targetallocators.yaml
+++ b/config/crd/bases/opentelemetry.io_targetallocators.yaml
@@ -3698,6 +3698,23 @@ spec:
                   type: object
                 type: array
                 x-kubernetes-list-type: atomic
+              weightOverrides:
+                items:
+                  properties:
+                    jobName:
+                      type: string
+                    weightClass:
+                      enum:
+                      - light
+                      - medium
+                      - heavy
+                      type: string
+                  required:
+                  - jobName
+                  - weightClass
+                  type: object
+                type: array
+                x-kubernetes-list-type: atomic
             type: object
           status:
             properties:
